package mdt;

option cc_generic_services = true;

message IndexSchema {
    optional string index_name  = 1;
    optional uint32 index_key_type = 2;
    optional bool shuttle = 3 [default = true] ;
}

message BigQueryTableSchema {
    optional string table_name = 1;
    optional uint64 table_ttl = 4;
    optional uint32 primary_key_type = 2;
    repeated IndexSchema index_descriptor_list = 3;
}
